image loading and added items to view_holder_news_feed_item.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
 
 
     implementation 'androidx.core:core-ktx:1.9.0'
